--- a/index.html
+++ b/index.html
@@ -3,42 +3,60 @@
   <head>
   <meta charset="UTF-8">
     <title> Mans pirmais HTML dokuments</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="stils.css">
   </head>
   <body>
+    <header>
+      <nav class="topnav">
+    <a href="/">SĀKUMS </a>
+    <a href="par_mums.html">PAR MUMS</a>
+    <a href="kontakti.html">KONTAKTI</a>
+    <a href="atsauksmes.html">ATSAUKSMES</a>
+    <a href="pamati_sintakse.html">PAMATI SINTAKSE</a>
+      </nav>
+    </header>
+     <aside class="sidebar">
+      <a href="#saturs">SATURS</a>
+      <a href="#tabula">TABULA</a>
+      <a href="#canva">CANVA</a>
+     </aside>
     <h1>PAR ZAĻĀKU LATVIJU!</h1>
-    <p>Esiet sveicināti!</p>
-    
-    <p>LAI JUMS LEKNA ZĀLE  UN SIRDSMIERS</p>
-    <img src="https://cdn.glitch.global/52137313-872f-4994-a33f-506e3d73ffa4/nog%C4%81%C5%BEu%20brauk%C5%A1ana%20Raideris.jpg?v=1744450607685" width="30%">
-    <marquee>REGULĀRI PELDU PA KREISI</marquee>
+    <main>
+            <section id="saturs">
+            <p>Esiet sveicināti!</p>
+            <p>LAI MIERS AR JUMS UN VIENMĒR LEKNA ZĀLE!</p>
+            <img src="https://cdn.glitch.global/52137313-872f-4994-a33f-506e3d73ffa4/nog%C4%81%C5%BEu%20brauk%C5%A1ana%20Raideris.jpg?v=1744450607685" width="30%">
+            <marquee>REGULĀRI PELDU PA KREISI</marquee>
+            </section>
+            <section id="tabula">
     <a href="https://zalesplausana.lv/cenradis/"> EJ UZ CITU LAPU</a><br><br>
     <a href="par mums.html">PAR MUMS</a><br><br>
         <table>
-      <tr>
-        <th>Platība kv/m</th>
-        <th>Pļaušana</th>
-        <th>Ar zāles savākšanu</th>
-        <th>Ar zāles utilizāciju</th>
-      </tr>
-                <tr>
-        <th>līdz 1000 kvm</th>
-        <th>0,035 euro</th>
-        <th>0,040 euro kvm</th>
-        <th>0,045 euro kvm</th>
-      </tr>
-      <tr>
-        <th>1000-5000 kvm</th>
-        <th>0,030 euro</th>
-        <th>0,035 euro kvm</th>
-        <th>0,040 euro kvm</th>
-      </tr>
-      <tr>
-        <th>5000+kvm</th>
-        <th>0,025 euro</th>
-        <th>0,030 eurokvm</th>
-        <th>0,035 euro kvm</th>
-      </tr>
+                    <tr>
+                      <th>Platība kv/m</th>
+                      <th>Pļaušana</th>
+                      <th>Ar zāles savākšanu</th>
+                      <th>Ar zāles utilizāciju</th>
+                    </tr>
+                              <tr>
+                      <th>līdz 1000 kvm</th> 
+                      <th>0,035 euro</th>
+                      <th>0,040 euro kvm</th>
+                      <th>0,045 euro kvm</th>
+                    </tr>
+                    <tr>
+                      <th>1000-5000 kvm</th>
+                      <th>0,030 euro</th>
+                      <th>0,035 euro kvm</th>
+                      <th>0,040 euro kvm</th>
+                    </tr>
+                    <tr>
+                      <th>5000+kvm</th>
+                      <th>0,025 euro</th>
+                      <th>0,030 eurokvm</th>
+                      <th>0,035 euro kvm</th>
+                    </tr>
     </table>
     <ol type="I">
       <li>Profesionāli darbinieki</li>
@@ -46,7 +64,7 @@
       <li>Pielāgojamies pasūtītājam</li>
     </ol>
     <ul type="square">
-      <li>Pļaušana ar:</li>
+      <li>Pļaušana ar:</li> 
       <ul>
       <li>Traktoru</li>
       <li>Pļaujmašīnu</li>
@@ -55,5 +73,14 @@
       <li>Aerācija</li>
       <li>Koku stādīšana</li>
     </ul>
+      </section>
+      <section id="canva">
+        <canvas id="zimejums" widht="500" height="400"></canvas>
+        <button onclick="taisnsturis()" class="btn btn-success">PIRMĀ POGA</button>
+        <button onclick="trīstūris()" class="btn btn-info">OTRĀ POGA</button>
+        <button onclick="aplis()" class="btn btn-warning">TREŠĀ POGA</button>
+        <button onclick="linija()" class="btn btn-danger">LĪNIJA</button>
+      </section>
+    </main> 
   </body>
 </html>
