😲🦪 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> Mans pirmais HTML dokuments</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="stils.css">
+    <script src="script.js"></script>
   </head>
   <body>
     <header>
@@ -25,6 +26,7 @@
     <main>
             <section id="saturs">
             <p>Esiet sveicināti!</p>
+            <p class="cits"> Prieks Jūs redzēt!</p>
             <p>LAI MIERS AR JUMS UN VIENMĒR LEKNA ZĀLE!</p>
             <img src="https://cdn.glitch.global/52137313-872f-4994-a33f-506e3d73ffa4/nog%C4%81%C5%BEu%20brauk%C5%A1ana%20Raideris.jpg?v=1744450607685" width="30%">
             <marquee>REGULĀRI PELDU PA KREISI</marquee>
@@ -75,7 +77,7 @@
     </ul>
       </section>
       <section id="canva">
-        <canvas id="zimejums" widht="500" height="400"></canvas>
+        <canvas id="zimejums" widht="800" height="500"></canvas>
         <button onclick="taisnsturis()" class="btn btn-success">PIRMĀ POGA</button>
         <button onclick="trīstūris()" class="btn btn-info">OTRĀ POGA</button>
         <button onclick="aplis()" class="btn btn-warning">TREŠĀ POGA</button>
