🕷️🛤️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       </section>
       <section id="canva">
         <canvas id="zimejums" widht="800" height="500"></canvas>
-        <button onclick="taisnsturis()" class="btn btn-success">PIRMĀ POGA</button>
-        <button onclick="trīstūris()" class="btn btn-info">OTRĀ POGA</button>
-        <button onclick="aplis()" class="btn btn-warning">TREŠĀ POGA</button>
+        <button onclick="taisnsturis()" class="btn btn-success">TAISNSTŪRIS</button>
+        <button onclick="tristuris()" class="btn btn-info">TRĪSTŪRIS</button>
+        <button onclick="aplis()" class="btn btn-warning">APLIS</button>
         <button onclick="linija()" class="btn btn-danger">LĪNIJA</button>
       </section>
     </main> 
