😎💗 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav class="topnav">
-    <a href="/">SĀKUMS </a>
+    <a href="/" class="active" >SĀKUMS </a>
     <a href="par_mums.html">PAR MUMS</a>
     <a href="kontakti.html">KONTAKTI</a>
     <a href="atsauksmes.html">ATSAUKSMES</a>
@@ -61,9 +61,9 @@
                     </tr>
     </table>
     <ol type="I">
-      <li>Profesionāli darbinieki</li>
-      <li>Vienmēr laikā</li>
-      <li>Pielāgojamies pasūtītājam</li>
+      <li class="cits">Profesionāli darbinieki</li>
+      <li class="cits">Vienmēr laikā</li>
+      <li class="cits">Pielāgojamies pasūtītājam</li>
     </ol>
     <ul type="square">
       <li>Pļaušana ar:</li> 
@@ -83,6 +83,7 @@
         <button onclick="aplis()" class="btn btn-warning">APLIS</button>
         <button onclick="linija()" class="btn btn-danger">LĪNIJA</button>
       </section>
-    </main> 
+    </main>
+    <footer>&copy; Bergenau 2025</footer>
   </body>
 </html>
