--- a/par mums.html
+++ b/par mums.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title> Mans pirmais HTML dokuments</title>
     <link rel="stylesheet" href="stils.css">
+    <script src="script.js"></script>
   </head>
   <body>
     <h1>PAR ZAĻĀKU LATVIJU!</h1>
