--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
 <html>
   <head>
+    
   <meta charset="UTF-8">
     <title> Mans pirmais HTML dokuments</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
@@ -24,6 +25,11 @@
      </aside>
     <h1>PAR ZAĻĀKU LATVIJU!</h1>
     <main>
+      <div class="container">
+      <div class="myDiv">
+      <h2>Tas ir heading div elements</h2>
+      <p>Tas ir kaut kāds div elementa teksts.</p>
+      </div>
             <section id="saturs">
             <p>Esiet sveicināti!</p>
             <p class="cits"> Prieks Jūs redzēt!</p>
