🎶➕ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
      </aside>
     <h1>PAR ZAĻĀKU LATVIJU!</h1>
     <main>
+      <section id="aprekins">
+        <label for="x"> Ievadi x vērtību </label>
+           <input type="number" id="x"><br>
+        <label for="y"> Ievadi y vērtību </label>
+           <input type="number" id="y"><br>
+        <button onclick="aprekins" class="btn btn-warning">APRĒĶINĀT</button>
+        <p id="rezultats">Šeit būs rezultāts </p>
+           
+      <section>/
+        
       <div class="container">
       <div class="myDiv">
       <h2>Tas ir heading div elements</h2>
